--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/patrickwilliamweber/my_movie_api#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
