--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "my_movie_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/patrickwilliamweber/my_movie_api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/patrickwilliamweber/my_movie_api/issues"
-  },
-  "homepage": "https://github.com/patrickwilliamweber/my_movie_api#readme",
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "eslint": "^7.28.0"
-  }
+    "name": "my_movie_api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/patrickwilliamweber/my_movie_api.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/patrickwilliamweber/my_movie_api/issues"
+    },
+    "homepage": "https://github.com/patrickwilliamweber/my_movie_api#readme",
+    "dependencies": {
+        "lodash": "^4.17.21"
+    },
+    "devDependencies": {
+        "eslint": "^7.28.0"
+    }
 }
